2004-10-09  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp, Eris/View.cpp: change how the View destructor works,
	  to stop asserts on deleting it. Entailed adding a hook method on View
	  so Entities have a way to remove themselves from the View's contents map.

2004-10-09  James Turner  <james@worldforge.org>

	* tests/tests.cpp : add initial tests of entity appearance
	
	* tests/agent.cpp: track per-client entity visiblity, and hence do contents
	  pruning when sending SIGHTs. Generate appearance and disappearance ops
	  whent entity visibility changes.
	
	* tests/stubServer.cpp: refactor the entity definition code, and
	  expand the test world.
	  
	* Eris/TypeInfo.cpp: fix a nasty bug revealled by the Appearance tests:
	  use of statics to store TypeInfoPtrs is inherently unsafe when
	  multiple Connections (and hence type trees) exist.

	* Eris/LogStream.h: fix log-levels of the warning and error streams

2004-10-03  James Turner  <james@worldforge.org>

	* tests/* : change the parent/child relationship of the stub server
	  and test code, so the stub server is now the parent. This makes
	  termination a bit easier to think about (stub server runs until
	  the child process exits)
	  
	* tests/* replaced use of a named pipe for OOB control in the tests,
	  with a socketpair, and made various tweaks so it now actually starts up
	  reliably and repeatably.

	* Eris/View.cpp: clean up logging output in some edge cases
	
	* Eris/TypeInfo.cpp: add asserts to try and catch an edge case Al reported

2004-10-02  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: Fix the strange asserts and crashes I introduced by
	  adding a debug line to setAttr, yuck. Eris should go in-game now
	  
	* Eris/Redispatch.cpp, Eris/Connection.cpp,.h : change how Redispatches
	  get cleaned up, so they can fail safely. No longer use 'delete this' and
	  instead get the Connection to clean up Redispatches at the end of the
	  dispatch loop.
