@@ -1,5 +1,11 @@
 2004-10-09  James Turner  <james@worldforge.org>
 
+	* Eris/Entity.cpp: refactor Entity destructor code to not be 
+	  stupid about cleaning up child entities. Test code now runs and completes
+	  correctly.
+
+2004-10-09  James Turner  <james@worldforge.org>
+
 	* Eris/Entity.cpp, Eris/View.cpp: change how the View destructor works,
 	  to stop asserts on deleting it. Entailed adding a hook method on View
 	  so Entities have a way to remove themselves from the View's contents map.
